# RAG---Deep-Linking-Search

./: .gitignore  docker-compose.yml  prometheus.yml  readme.md
backend/: .env  Dockerfile  pyproject.toml
backend/src/: config.py
backend/src/api/: main.py
backend/src/services/: document_processor.py  rag_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  DocumentViewer.css  RAGResponse.css
frontend/src/components/: Chat.jsx  DocumentUpload.jsx  DocumentViewer.jsx  RAGResponse.jsx  SourceReference.jsx
